# alwayssaved-embedding-service

./: .gitignore  Dockerfile  Pipfile  README.md  dockerignore  pyproject.toml  requirements.txt  service.py
dev_utils/: main.py
services/aws/: s3.py  ses.py  sqs.py  ssm.py
services/embedding/: main.py
services/embedding/utils/: main.py
services/qdrant/: main.py
services/utils/: main.py
services/utils/mongodb/: main.py
services/utils/types/: main.py
