[project]
name = "alwayssaved-embedding-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client",
    "python-dotenv",
    "boto3",
    "sentence-transformers",
    "uuid",
    "pdfplumber",
    "beautifulsoup4",
    "torch",
    "pymongo",
]
[dependency-groups]
dev = [
    "pre-commit",
    "mypy",
    "ruff",
    "mypy-boto3-ses",
]
