[project]
name = "alwayssaved-embedding-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client",
    "python-dotenv",
    "sentence-transformers",
    "uuid",
    "pdfplumber",
    "beautifulsoup4",
    "torch",
    "pymongo",
    "aioboto3>=15.5.0",
]
[dependency-groups]
dev = [
    "pre-commit",
    "mypy",
    "ruff",
    "types-aiobotocore[ses]>=3.7.0",
]
